--- a/weather.html
+++ b/weather.html
@@ -5,183 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
-            color: #FFFFFF;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            padding: 20px;
-        }
-
-        .container {
-            background: rgba(30, 30, 46, 0.95);
-            padding: 30px;
-            border-radius: 20px;
-            width: 100%;
-            max-width: 450px;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-            backdrop-filter: blur(10px);
-            transform: translateY(20px);
-            opacity: 0;
-            animation: slideIn 0.5s ease forwards;
-        }
-
-        @keyframes slideIn {
-            to {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
-
-        h1 {
-            margin-bottom: 25px;
-            font-size: 28px;
-            font-weight: 600;
-            text-align: center;
-            color: #fff;
-            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-        }
-
-        .input-container {
-            display: flex;
-            gap: 10px;
-            margin-bottom: 25px;
-        }
-
-        input[type="text"] {
-            flex: 1;
-            padding: 12px 20px;
-            background-color: rgba(51, 51, 51, 0.8);
-            border: 2px solid transparent;
-            border-radius: 10px;
-            color: #FFF;
-            font-size: 16px;
-            transition: all 0.3s ease;
-        }
-
-        input[type="text"]:focus {
-            border-color: #7c3aed;
-            outline: none;
-            box-shadow: 0 0 0 2px rgba(124, 58, 237, 0.3);
-        }
-
-        button {
-            padding: 12px 25px;
-            background: linear-gradient(45deg, #7c3aed, #6d28d9);
-            border: none;
-            border-radius: 10px;
-            color: #FFF;
-            font-size: 16px;
-            cursor: pointer;
-            transition: transform 0.2s, box-shadow 0.2s;
-        }
-
-        button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(124, 58, 237, 0.3);
-        }
-
-        button:active {
-            transform: translateY(0);
-        }
-
-        #weather-info {
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 15px;
-            padding: 20px;
-            margin-top: 25px;
-            opacity: 0;
-            transform: scale(0.95);
-            transition: all 0.3s ease;
-        }
-
-        #weather-info.visible {
-            opacity: 1;
-            transform: scale(1);
-        }
-
-        #weather-info h2 {
-            font-size: 24px;
-            margin-bottom: 15px;
-            color: #fff;
-        }
-
-        .weather-details {
-            display: grid;
-            gap: 15px;
-        }
-
-        .weather-item {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            padding: 10px;
-            background: rgba(255, 255, 255, 0.05);
-            border-radius: 8px;
-            transition: transform 0.2s;
-        }
-
-        .weather-item:hover {
-            transform: translateX(5px);
-        }
-
-        .weather-item i {
-            font-size: 20px;
-            color: #7c3aed;
-        }
-
-        .hidden {
-            display: none;
-        }
-
-        #error-message {
-            color: #ef4444;
-            margin-top: 20px;
-            padding: 10px;
-            border-radius: 8px;
-            background: rgba(239, 68, 68, 0.1);
-            text-align: center;
-            animation: shake 0.5s ease-in-out;
-        }
-
-        @keyframes shake {
-            0%, 100% { transform: translateX(0); }
-            25% { transform: translateX(-5px); }
-            75% { transform: translateX(5px); }
-        }
-
-        .loading {
-            display: none;
-            justify-content: center;
-            margin: 20px 0;
-        }
-
-        .loading div {
-            width: 10px;
-            height: 10px;
-            margin: 0 5px;
-            background-color: #7c3aed;
-            border-radius: 50%;
-            animation: bounce 0.5s infinite alternate;
-        }
-
-        .loading div:nth-child(2) { animation-delay: 0.1s; }
-        .loading div:nth-child(3) { animation-delay: 0.2s; }
-
-        @keyframes bounce {
-            to { transform: translateY(-10px); }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -218,79 +42,6 @@
         </div>
         <p id="error-message" class="hidden">City not found. Please try again.</p>
     </div>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const cityInput = document.getElementById("city-input");
-            const getWeatherBtn = document.getElementById("get-weather-btn");
-            const weatherInfo = document.getElementById("weather-info");
-            const cityNameDisplay = document.getElementById("city-name");
-            const temperatureDisplay = document.getElementById("temperature");
-            const descriptionDisplay = document.getElementById("description");
-            const humidityDisplay = document.getElementById("humidity");
-            const windSpeedDisplay = document.getElementById("wind-speed");
-            const errorMessage = document.getElementById("error-message");
-            const loading = document.querySelector(".loading");
-
-            const API_KEY = "0ca65696d7ae00f4978736cd2beb47ab";
-
-            // Handle Enter key press
-            cityInput.addEventListener('keypress', (e) => {
-                if (e.key === 'Enter') {
-                    getWeatherBtn.click();
-                }
-            });
-
-            getWeatherBtn.addEventListener('click', async () => {
-                const city = cityInput.value.trim();
-                if (!city) return;
-
-                // Show loading animation
-                loading.style.display = 'flex';
-                weatherInfo.classList.add('hidden');
-                errorMessage.classList.add('hidden');
-
-                try {
-                    const weatherData = await fetchWeatherData(city);
-                    displayWeatherData(weatherData);
-                } catch (error) {
-                    showError();
-                } finally {
-                    loading.style.display = 'none';
-                }
-            });
-
-            async function fetchWeatherData(city) {
-                const url = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${API_KEY}&units=metric`;
-                const response = await fetch(url);
-
-                if (!response.ok) {
-                    throw new Error('City not found');
-                }
-                return await response.json();
-            }
-
-            function displayWeatherData(data) {
-                const { name, main, weather, wind } = data;
-                
-                cityNameDisplay.textContent = name;
-                temperatureDisplay.textContent = `Temperature: ${Math.round(main.temp)}°C`;
-                descriptionDisplay.textContent = `Weather: ${weather[0].description}`;
-                humidityDisplay.textContent = `Humidity: ${main.humidity}%`;
-                windSpeedDisplay.textContent = `Wind Speed: ${Math.round(wind.speed * 3.6)} km/h`;
-
-                weatherInfo.classList.remove("hidden");
-                setTimeout(() => {
-                    weatherInfo.classList.add("visible");
-                }, 10);
-            }
-
-            function showError() {
-                weatherInfo.classList.remove("visible");
-                weatherInfo.classList.add('hidden');
-                errorMessage.classList.remove('hidden');
-            }
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
